fixed cutoff on animation

--- a/css/creative.css
+++ b/css/creative.css
@@ -427,8 +427,8 @@ body {
   font-weight: 300;
   color: #FFFFFF;
   margin-bottom: 20px;
-  height: 35px;
-  font-size: 30px;
+  height: 44px;
+  font-size: 28px;
   overflow: hidden
 }
 
